Fixed intedation, whitespace, empty lines and moved user info variables inside the main template

--- a/workspace/utilities/admin-tools/admin-tools.css
+++ b/workspace/utilities/admin-tools/admin-tools.css
@@ -40,7 +40,7 @@
 
 .admin-tools:hover .widgets{
 	display: block;
-	animation: fadein 0.2s forwards;
+	animation: admin-tools-fadein 0.2s forwards;
 }
 
 .admin-tools .widget{
@@ -53,7 +53,7 @@
 	margin-right: 5px;
 }
 
-@keyframes fadein {
+@keyframes admin-tools-fadein {
 	from {transform: translateY(-5px);opacity: 0;}
 	to {transform: translateY(0px);opacity: 1;}
 }
